<resources>
    <string name="app_name">KeyChainDemo</string>
    <string name="add_name">编辑密钥</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name">钥匙名称</string>
    <string name="email">账号</string>
    <string name="key">密码</string>
    <string name="remake">备注</string>
    <string name="save">保存数据</string>
    <string name="date">创建日期</string>

    <string name="action_settings">Settings</string>
</resources>
